--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/02-04-house-calc.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/02-04-house-calc.mdx
@@ -17,19 +17,19 @@ Lastly, let's look at adding some constants and variables to make this more dyna
 
     - the screen size. Create constants for `SCREEN_WIDTH` and `SCREEN_HEIGHT`.
     - the house size - which the user will provide via the terminal at the start
-    - to read in house size we will need to read and convert data. So a `userInput` variable could be created for this.
+    - to read in house size we will need to read and convert data. So a `user_input` variable could be created for this.
     - the wall position (its x and y) - this is where we draw the wall.
 
     :::tip
-        -  Assign `wallX` a value to center the wall - use `(SCREEN_WIDTH - houseSize) / 2`.
-        -  Calculate `wallY` from the bottom of the screen - this will be `SCREEN_HEIGHT - BOTTOM_GAP - houseSize`.
+        -  Assign `wall_x` a value to center the wall - use `(SCREEN_WIDTH - house_size) / 2`.
+        -  Calculate `wall_y` from the bottom of the screen - this will be `SCREEN_HEIGHT - BOTTOM_GAP - house_size`.
     :::
 
 2. Code this up and test it out:
 
     - Add constants for screen width and height - Where else could you use these?
-    - Add variables for `houseSize` and `userInput` - write the terminal code to read these in
-    - Add variables for `wallX` and `wallY` - calculate these as noted above.
+    - Add variables for `house_size` and `user_input` - write the terminal code to read these in
+    - Add variables for `wall_x` and `wall_y` - calculate these as noted above.
     - Compile and run and try different wall sizes.
 
     <Accordion>
@@ -37,36 +37,40 @@ Lastly, let's look at adding some constants and variables to make this more dyna
 
       As I coded this I realised I needed an extra constant - `BOTTOM_GAP`. When you find you are hard-coding values you should think if there is a meaningful name to describe the value. Naming the "bottom gap" helps make it clearer what that 100 was about, whereas the 2 does not need a different name. We are dividing by 2 to get half the value.
 
-      ```cs {4-17,22,24}
-      using static System.Convert;
-      using static SplashKitSDK.SplashKit;
+      ```c++ {3-5, 9-18,23,25}
+      #include "splashkit.h"
 
       const int SCREEN_WIDTH = 800;
       const int SCREEN_HEIGHT = 600;
       const int BOTTOM_GAP = 100;
 
-      int houseSize;
-      string userInput;
-      int wallX, wallY;
+      int main()
+      {
+          int house_size;
+          string user_input;
+          int wall_x, wall_y;
 
-      WriteLine("Enter the size of the house: ");
-      userInput = ReadLine();
-      houseSize = ToInt32(userInput);
+          write_line("Enter the size of the house: ");
+          user_input = read_line();
+          house_size = to_integer(user_input);
 
-      wallX = (SCREEN_WIDTH - houseSize) / 2;
-      wallY = SCREEN_HEIGHT - BOTTOM_GAP - houseSize;
+          wall_x = (SCREEN_WIDTH - house_size) / 2;
+          wall_y = SCREEN_HEIGHT - BOTTOM_GAP - house_size;
 
-      OpenWindow("House Drawing by Andrew", SCREEN_WIDTH, SCREEN_HEIGHT);
+          open_window("House Drawing by Andrew", SCREEN_WIDTH, SCREEN_HEIGHT);
 
-      ClearScreen(ColorWhite());
-      FillEllipse(ColorBrightGreen(), 0, 400, SCREEN_WIDTH, 400);
+          clear_screen(color_white());
+          fill_ellipse(color_bright_green(), 0, 400, SCREEN_WIDTH, 400);
 
-      FillRectangle(ColorGray(), wallX, wallY, houseSize, houseSize);
-      FillTriangle(ColorRed(), 250, 300, 400, 150, 550, 300);
+          fill_rectangle(color_gray(), wall_x, wall_y, house_size, house_size);
+          fill_triangle(color_red(), 250, 300, 400, 150, 550, 300);
 
-      RefreshScreen();
+          refresh_screen();
 
-      Delay(5000);
+          delay(5000);
+
+          return 0;
+      }
       ```
 
       </AccordionItem>
@@ -77,12 +81,12 @@ Lastly, let's look at adding some constants and variables to make this more dyna
     :::tip
     I used variables for:
 
-      - `roofOverhang` - based on `houseSize`
-      - `roofHeight` - based on the `houseSize`
-      - `roofLeft` - based on `wallX` and subtracting the overhang.
-      - `roofMiddle` - center of the house - you can calculate it from `wallX` and `houseSize`
-      - `roofRight` - based on `wallX`, plus the house size, and the overhang.
-      - `roofTop` - based on `wallY`, minus the `roofHeight`
+      - `roof_overhang` - based on `house_size`
+      - `roof_height` - based on the `house_size`
+      - `roof_left` - based on `wall_x` and subtracting the overhang.
+      - `roof_middle` - center of the house - you can calculate it from `wall_x` and `house_size`
+      - `roof_right` - based on `wall_x`, plus the house size, and the overhang.
+      - `roof_top` - based on `wall_y`, minus the `roof_height`
     :::
 
 4. Compile and run, then check your calculation if it doesn't look right.
@@ -93,9 +97,8 @@ Lastly, let's look at adding some constants and variables to make this more dyna
     <Accordion>
       <AccordionItem header="Final code">
 
-      ```cs {6,13-14,23-28,33,36}
-      using static System.Convert;
-      using static SplashKitSDK.SplashKit;
+      ```c++ {5,14-15,24-29,34,37}
+      #include "splashkit.h"
 
       const int SCREEN_WIDTH = 1280;
       const int SCREEN_HEIGHT = 720;
@@ -103,37 +106,42 @@ Lastly, let's look at adding some constants and variables to make this more dyna
 
       const int BOTTOM_GAP = 100;
 
-      int houseSize;
-      string userInput;
-      int wallX, wallY;
-      int roofLeft, roofMiddle, roofRight, roofTop;
-      int roofOverhang, roofHeight;
+      int main()
+      {
+          int house_size;
+          string user_input;
+          int wall_x, wall_y;
+          int roof_left, roof_middle, roof_right, roof_top;
+          int roof_overhang, roof_height;
 
-      Write("Enter the size of the house: ");
-      userInput = ReadLine();
-      houseSize = ToInt32(userInput);
+          write("Enter the size of the house: ");
+          user_input = read_line();
+          house_size = to_integer(user_input);
 
-      wallX = (SCREEN_WIDTH - houseSize) / 2;
-      wallY = SCREEN_HEIGHT - BOTTOM_GAP - houseSize;
+          wall_x = (SCREEN_WIDTH - house_size) / 2;
+          wall_y = SCREEN_HEIGHT - BOTTOM_GAP - house_size;
 
-      roofOverhang = houseSize / 4;
-      roofHeight = houseSize * 3 / 4;
-      roofLeft = wallX - roofOverhang;
-      roofMiddle = wallX + houseSize / 2;
-      roofRight = wallX + houseSize + roofOverhang;
-      roofTop = wallY - roofHeight;
+          roof_overhang = house_size / 4;
+          roof_height = house_size * 3 / 4;
+          roof_left = wall_x - roof_overhang;
+          roof_middle = wall_x + house_size / 2;
+          roof_right = wall_x + house_size + roof_overhang;
+          roof_top = wall_y - roof_height;
 
-      OpenWindow("House Drawing by Andrew", SCREEN_WIDTH, SCREEN_HEIGHT);
+          open_window("House Drawing by Andrew", SCREEN_WIDTH, SCREEN_HEIGHT);
 
-      ClearScreen(ColorWhite());
-      FillEllipse(ColorBrightGreen(), 0, HILL_HEIGHT, SCREEN_WIDTH, HILL_HEIGHT);
+          clear_screen(color_white());
+          fill_ellipse(color_bright_green(), 0, HILL_HEIGHT, SCREEN_WIDTH, HILL_HEIGHT);
 
-      FillRectangle(ColorGray(), wallX, wallY, houseSize, houseSize);
-      FillTriangle(ColorRed(), roofLeft, wallY, roofMiddle, roofTop, roofRight, wallY);
+          fill_rectangle(color_gray(), wall_x, wall_y, house_size, house_size);
+          fill_triangle(color_red(), roof_left, wall_y, roof_middle, roof_top, roof_right, wall_y);
 
-      RefreshScreen();
+          refresh_screen();
 
-      Delay(5000);
+          delay(5000);
+
+          return 0;
+      }
       ```
 
       </AccordionItem>
