--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-01-read-name.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-01-read-name.mdx
@@ -4,6 +4,7 @@ sidebar:
   label: " - Read the user's name"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
+import { Steps } from '@astrojs/starlight/components';
 
 Best first step is to build something small, then we can grow the program our from that start. Let's just get the first two messages handled - reading the user's name and displaying it. So we want to see this at the end:
 
@@ -13,42 +14,31 @@ What is your name: Andrew
 Hi Andrew.
 ```
 
-1. Open your terminal, and setup your project
+<Steps>
 
-    ```zsh
-    # Move you your code projects folder
-    cd ~/Documents/Code # or cd /c/Users/andrew/Documents/Code
-    
-    # Create and move into a folder for the project
-    mkdir TravelCalculator
-    cd TravelCalculator
+1. Open a folder in VS Code, and create a new `.cpp` file.
 
-    # Create a blank dotnet project
-    dotnet new console
-    
-    # Add the SplashKit library
-    dotnet add package splashkit
-
-    # Open in VS Code
-    code .
-    ```
-
-2. Add the [using directives](/book/part-1-instructions/1-sequence/0-panorama/1-method-library) to access the SplashKit and Convert code.
+2. Start by adding the [#include directive](/book/part-1-instructions/1-sequence/0-panorama/1-method-library) to access the SplashKit library, and an empty [`main` function](TODO).
 
     <Accordion>
-      <AccordionItem header="Code with using directives">
+      <AccordionItem header="Code with #include directive">
 
-    At this point you should just have these two lines of code.
+    At this point you should just have these lines of code.
 
-    ```csharp
-    using static System.Convert;
-    using static SplashKitSDK.SplashKit;
+    ```c++
+    #include "splashkit.h"
+
+    int main()
+    {
+        // Our main code will go here!
+        return 0;
+    }
     ```
 
       </AccordionItem>
     </Accordion>
 
-    As you look at this you want to see if there are any values that will change. We will need to create [variables](/book/part-1-instructions/1-sequence/0-panorama/3-variables) to store these.
+4. As you look at this you, think about whether there are any values that will change. We will need to create [variables](/book/part-1-instructions/1-sequence-and-data/0-panorama/3-variables) to store these.
 
     Looking at the first lines, I imagine that we may have different users run this. So their name may change.
 
@@ -56,34 +46,41 @@ Hi Andrew.
     Is this a string, int, or double? String is for text, int whole numbers, and double for real numbers.
     :::
 
-3. Add the code to create a `name` variable - then we can think about how we use this.
-4. Review the messages we want to output. To start we want to output the message `"What is your name: "`, read the text and user enters, then output a blank line and the greeting text `"Hi "` followed by the user's name.
+5. Add the code to create a `name` variable - then we can think about how we use this.
+
+6. Review the messages we want to output. To start we want to output the message `"What is your name: "`, read the text and user enters, then output a blank line and the greeting text `"Hi "` followed by the user's name.
   
-    Looking back at the [terminal methods](/book/part-1-instructions/1-sequence/0-panorama/6-terminal-method-to-use), we have methods to output text (`Write` and `WriteLine`), and read text from the user (`ReadLine`). Use these to display the prompt, and output the required messages.
+    Looking back at the [terminal methods](/book/part-1-instructions/1-sequence/0-panorama/6-terminal-method-to-use), we have methods to output text (`write` and `write_line`), and read text from the user (`read_line`). Use these to display the prompt, and output the required messages.
 
     <Accordion>
       <AccordionItem header="Reading and using the user name">
 
-    ```cs {3-10}
-    using static System.Convert;
-    using static SplashKitSDK.SplashKit;
+    ```c++ {5-11}
+    #include "splashkit.h"
 
-    string name;
-    Write("What is your name: ");
-    name = ReadLine();
+    int main()
+    {
+        string name;
+        write("What is your name: ");
+        name = read_line();
 
-    WriteLine();
-    WriteLine($"Hi {name}.");
-    WriteLine();
+        write_line();
+        write_line("Hi " + name + ".");
+        write_line();
+
+        return 0;
+    }
     ```
 
       </AccordionItem>
     </Accordion>
 
-5. Now compile and run the program to see the output. Check it against what we were aiming to achieve.
+7. Now compile and run the program to see the output. Check it against what we were aiming to achieve.
 
     :::note
 
     Notice how you have a sequence of instructions, and can use variables to store data. Try entering different names.
 
     :::
+
+</Steps>
