--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-02-distance-time.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-02-distance-time.mdx
@@ -26,39 +26,43 @@ How long has it taken? Enter minutes: 7
 
 2. Add the code to read these values in from the user.
 
-    Now, we have a problem - you cannot store the result of calling `ReadLine` into a `int` or a `double`. How can we get this to work? There isn't *one* method we can use to here, so we have to think about using what we have. If you look back at the [terminal methods](/book/part-1-instructions/1-sequence/0-panorama/6-terminal-method-to-use) you will see there is a `ToInt32` and a `ToDouble` method. These convert strings to numeric values. We could read the text from the user into a string, and then convert that and store the result in our variables.
+    Now, we have a problem - you cannot store the result of calling `read_line` into a `int` or a `double`. How can we get this to work? There isn't *one* method we can use to here, so we have to think about using what we have. If you look back at the [terminal methods](/book/part-1-instructions/1-sequence/0-panorama/6-terminal-method-to-use) you will see there is a `to_integer` and a `to_double` method. These convert strings to numeric values. We could read the text from the user into a string, and then convert that and store the result in our variables.
 
-    - Add a `userInput` string variable.
-    - Output appropriate messages with `Write`
-    - Read input from the user, and store it in `userInput`
-    - Convert `userInput` to the required type, and store the distance variable.
+    - Add a `user_input` string variable.
+    - Output appropriate messages with `write`
+    - Read input from the user, and store it in `user_input`
+    - Convert `user_input` to the required type, and store the distance variable.
     - Repeat for the time variable
 
     <Accordion>
       <AccordionItem header="Code for reading distance and time">
 
-    ```cs {5-7,15-22}
-    using static System.Convert;
-    using static SplashKitSDK.SplashKit;
+    ```c++ {6-7,16-22}
+    #include "splashkit.h"
 
-    string name;
-    string userInput;
-    double distance, time;
+    int main()
+    {
+        string name;
+        string user_input;
+        double distance, time;
 
-    Write("What is your name: ");
-    name = ReadLine();
+        write("What is your name: ");
+        name = read_line();
 
-    WriteLine();
-    WriteLine($"Hi {name}.");
-    WriteLine();
+        write_line();
+        write_line("Hi " + name + ".");
+        write_line();
 
-    Write("How far have you travelled so far? Enter km: ");
-    userInput = ReadLine();
-    distance = ToDouble(userInput);
+        write("How far have you travelled so far? Enter km: ");
+        user_input = read_line();
+        distance = to_double(user_input);
 
-    Write("How long has it taken? Enter minutes: ");
-    userInput = ReadLine();
-    time = ToDouble(userInput);
+        write("How long has it taken? Enter minutes: ");
+        user_input = read_line();
+        time = to_double(user_input);
+
+        return 0;
+    }
     ```
 
       </AccordionItem>
