--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/00-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/00-overview.mdx
@@ -6,7 +6,7 @@ Let's get coding. Programming is a practical skill, so one of the best ways to l
 
 There are the following parts to this guided tour:
 
-- Learn to use terminal methods by building a travel calculator
+- Learn to use terminal methods by building a simple chatbot
 - Learn to use graphical methods by building a house drawing
 
 At the end of this you should feel confident building small programs that interact with the user via the terminal and have a graphical output.
