--- a/src/content/docs/book/part-1-instructions/1-sequence/4-activities/03-1-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/4-activities/03-1-drawing.mdx
@@ -8,26 +8,21 @@ import NoCopy from '/src/components/NoCopy.astro'
 <NoCopy>
 For this task you can build on the ideas from the [house drawing](/book/part-1-instructions/1-sequence/3-guided-tour/01-00-house-drawing) tour. You may also find it useful to read about [drawing in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-2-graphics/#drawing-to-a-window) and [playing sound effects in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-3-audio) for this task.
 
-Create a program that draws a custom scene, picture, or animation using shapes and colors from SplashKit - while sticking with just sequence and data.
+Create a program that draws a custom scene, picture, or animation using shapes and colors from SplashKit - while sticking with just a single sequence.
 
 - Make sure to draw at least 3 shapes, or have a few steps in your animation
-- Provide some calculated elements to the scene, that the user can input. Something like the position, size, or speed of a component is sufficient.
+- Use some dynamically calculated values (for instance random colours or sizes)
 
 This could be a simple image like a car or flower shape, or you could combine text, delays, drawing, and sound effects to create an animation.
 
-For example, the following is a starter/trailer for some scary game. The user would change the speed of the animation by scaling the delay time. Use this for inspiration.
+For example, the following is a starter/trailer for some scary game. Use this for inspiration.
 
 ```txt
-Welcome friend. What is your name: Andrew
-Hello Andrew,
-What are you most scared of? Spiders
-Delay speed scale? [100 to 1000]: 750
-
 You are approaching what looks like a haunted house
 (delay - scale by speed scale factor)
 (play door creak sound effect - delay scaled)
 It is dark in here...
-Andrew! (delay then print) Spiders everywhere!
+(delay then print) Spiders everywhere!
 (open window - show black - delay)
 (draw scary picture - play scream sound effect - short delay)
 (draw black screen - short delay)
